Implementação da criação de grupos e lojas e alteração de grupos
